--- a/last/index.html
+++ b/last/index.html
@@ -3,15 +3,79 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
   <title>Index</title>
+  <style>
+      body {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 100vh;
+    margin: 0;
+    background-color: black;
+  }
+
+  .text-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    font-size: 110px; 
+    margin: 130px;
+    font-family: 'pretendard';
+    white-space: nowrap;
+  }
+  
+  .animated-text {
+    color: #4f4f4f; 
+    transition: color 0.3s ease-in-out, transform 0.5s ease-in-out;
+    margin: 5px 0;
+  }
+  
+  .animated-text:hover {
+    color: #003cff; 
+    transform: translateX(-100px); 
+    cursor: pointer; 
+    font-weight: bold;
+  }
+
+  .설명글 {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin: 130px;
+    font-family: 'pretendard';
+    border-bottom: 1px solid rgb(165, 165, 165);
+  }
+
+  .설명글 h2 {
+    margin-top: 0;    
+    margin-bottom: 10px; 
+    font-size: 25px; 
+    color: white;
+  } 
+
+  .설명글 a {
+    margin-top: 0;    
+    margin-bottom: 10px; 
+    font-size: 15px;
+    color: rgb(165, 165, 165);
+  } 
+
+  .설명글 p {
+    margin-top: 0;    
+    margin-bottom: 10px; 
+    font-size: 15px; 
+    color: rgb(165, 165, 165);
+  } 
+
+  </style>
 </head>
+
 <body>
 
   <div class="설명글">
   <h2>웹퍼블리싱</h2>
   <h2>직무수행능력평가2</h2>
-  <a>제 포트폴리오는 존나 최악 쓰레기밖에 없지만 주제가 포트폴리오라네요... 자퇴전도사 이준석의 말을 들어야 했던 것 같습니다 저는 구제불능입니다 구라 안 치고 2학기 학점 잘 나와야 1점대가 될 것 같아요 스껄 ^^</a>
+  <a>이번 평가의 주제인 포트폴리오 모음입니다. 계원예술대학교를 재학하며 어쩌고저쩌고 땨땨땨땨~~~~ 보고 싶은 전공 과목을 클릭하시면 상세 페이지로 넘어갑니다.</a>
   <p></p>
   <p></p>
   <p>jhj030424@gmail.com</p>
