--- a/last/web.html
+++ b/last/web.html
@@ -28,7 +28,7 @@
             height: 250px; 
         }
 
-        section{
+        section {
             padding: 50px;
         }
 
@@ -36,6 +36,9 @@
             color: white;
             font-family: 'pretendard';
             font-size: 20px;
+            text-decoration: underline;
+            text-underline-offset: 15px;
+            padding-bottom: 30px;
         }
 
         dd {
@@ -46,20 +49,20 @@
             overflow-wrap: break-word;
         }
 
-        #content>section>div{
+        #content>section>div {
             display: flex;
             justify-content: center;
         }
 
-        #content dt{
+        #content dt { 
             font-weight: bold;
         }
 
-        #content dd{
+        #content dd {
             margin: 0px;
         }
 
-        .container{
+        .container {
             margin: 0px 10px;
         }
 
