--- a/lastexam/index.html
+++ b/lastexam/index.html
@@ -110,7 +110,9 @@
         </ul>
     </header>
     
+    <footer>
     <a href="sub.html"><b>ROCK WILL NEVER DIE</b></a>
+    </footer>
     </div>
     <canvas id="canvas" width="500" height="500"></canvas>
  
