--- a/lastexam/sub.html
+++ b/lastexam/sub.html
@@ -255,8 +255,8 @@
                 <a href="page1.html"><img src="에이브릴라빈.webp" alt="Image 1"></a>
                 <a href="page2.html"><img src="메탈리카.jpg" alt="Image 2"></a>
                 <a href="page3.html"><img src="오아시스.jpg" alt="Image 3"></a>
-                <img src="난너없이.jpg" alt="Image 4">
-                <img src="라스베가스.jpg" alt="Image 5">
+                <a href="page4.html"><img src="난너없이.jpg" alt="Image 4"></a>
+                <a href="page5.html"><img src="라스베가스.jpg" alt="Image 5"></a>
             </div>
         </div>
         </section>
