--- a/lastexam/index.html
+++ b/lastexam/index.html
@@ -93,6 +93,20 @@
         a:hover b {
             transform: scale(1.2);
         }
+
+        @media screen and (max-width: 1200px) {
+    #wrap {
+        min-width: 800px;
+        max-width: 1200px;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    #wrap {
+        min-width: 100%;
+        max-width: 100%;
+    }
+}
         
     </style>
 </head>
