--- a/lastexam/sub.html
+++ b/lastexam/sub.html
@@ -8,6 +8,11 @@
     <title>이미지 갤러리</title>
 </head>
 <style>
+    #wrap {
+        min-width: 1000px;
+        max-width: 1920px;
+    }
+
     header {
         position: fixed;
         top: 0;
@@ -184,6 +189,28 @@
         height: 100vh;
         margin-top: 50px; 
     }
+
+    @media screen and (max-width: 600px) {
+    #wrap {
+        min-width: 90%;
+    }
+
+    header {
+        font-size: 0.8em;
+    }
+
+    h2 {
+        font-size: 1.5em;
+    }
+
+    .image-container img {
+        width: 95%;
+    }
+
+    .artist-container, .gellery img {
+        width: 90%;
+    }
+}
 
 </style>
 
