--- a/lastexam/page1.html
+++ b/lastexam/page1.html
@@ -19,6 +19,11 @@
     animation: fadeIn 2s ease-in-out; /* 접속했을 때 페이드 인 되는 효과 코드 */
     animation-fill-mode: forwards; /* 애니메이션이 끝난 상태를 유지함 */
   }
+  
+  #wrap {
+    width: 100%;
+    min-height: 100%;
+} 
 
   header {
     position: fixed;
@@ -130,11 +135,13 @@
 
   #content {
     display: flex;
-    justify-content: space-around;
-    align-items: flex-start;
-    flex-wrap: wrap;
-    margin-top: 150px;
+  justify-content: space-around;
+  align-items: center; /* Updated to align vertically */
+  flex-wrap: wrap;
+  margin-top: 150px;
   }
+
+  
 
   #content > section > div > h2 {
     font-size: 50px;
@@ -151,6 +158,7 @@
 
   .textcontainer {
     display: flex;
+    position: relative;
     flex-direction: column;
     margin-right: 50px;
   }
@@ -197,6 +205,7 @@
   </style>
 </head>
 <body>
+  <div id="wrap">
     <h2>Final exam</h2>
     <header>
         <ul>
@@ -393,5 +402,7 @@
             document.body.style.opacity = 1;
         });
 </script>
+
+</div>
 </body>
 </html>
