--- a/lastexam/page1.html
+++ b/lastexam/page1.html
@@ -191,6 +191,7 @@
     width: 300px; /* 각 섹션의 폭 조절 */
     margin-bottom: 20px;
     margin-left: 600px;
+    margin-top: 50px;
   } 
 
   @keyframes fadeIn {
@@ -247,9 +248,7 @@
                  <dt><span>02</span>Complicated</dt>
           </div>
       </div>
-  </section>
 
-  <section>
     <div>
         <div class="textcontainer">
             <div class="line"></div>
@@ -261,9 +260,7 @@
                <dt><span>04</span>I'm with you</dt>
         </div>
     </div>
-</section>
 
-<section>
   <div>
       <div class="textcontainer">
           <div class="line"></div>
@@ -275,9 +272,7 @@
              <dt><span>06</span>Unwanted</dt>
       </div>
   </div>
-</section>
 
-<section>
   <div>
       <div class="textcontainer">
           <div class="line"></div>
@@ -289,9 +284,9 @@
              <dt><span>08</span>Anything but Ordinary</dt>
       </div>
   </div>
-</section>
 
-<section>
+
+
   <div>
       <div class="textcontainer">
           <div class="line"></div>
